add footer and home

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="border-top border-dark">
+    <div class="mt-2 text-center">
+        <h6>Copyrigt &copy; {{currentYear}}<a class="text-danger" href="">Simple Chat App</a></h6>
+    </div>
+</footer>
