--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,19 @@
-<p>home works!</p>
+
+    
+
+<div class="d-flex justify-content-center">
+    <div class="col-12 col-lg-5">
+        <main class="form-singin">
+            <form class="p-3 border" action="">
+                <h4>Choose Your Name</h4>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" placeholder="Name">
+                    <label for="name">Name</label>
+                </div>
+                <div class="d-grid mt-4 px-4">
+                    <button class="btn btn-warning">Submit</button>
+                </div>
+            </form>
+        </main>
+    </div>
+</div>
