--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,11 +4,17 @@
 <div class="d-flex justify-content-center">
     <div class="col-12 col-lg-5">
         <main class="form-singin">
-            <form class="p-3 border" action="">
+            <form [formGroup]="userForm" (ngSubmit)="submitForm" autocomplete="off" class="p-3 border" action="">
                 <h4>Choose Your Name</h4>
                 <div class="form-floating mb-3">
-                    <input type="text" class="form-control" placeholder="Name">
+                    <input formControlName="name" type="text" class="form-control" placeholder="Name" [class.is-invalid]="submitted && userForm.get('name')?.errors">
                     <label for="name">Name</label>
+                    <span class="text-danger" *ngIf="submitted &&userForm.get('name')?.hasError('required')">Please Cohoose Valid Name
+
+                    </span>
+                    <span class="text-danger" *ngIf="submitted &&userForm.get('name')?.hasError('maxLenght') || userForm.get('name')?.hasError('minLenght')" >Please Cohoose Valid Name
+
+                    </span>
                 </div>
                 <div class="d-grid mt-4 px-4">
                     <button class="btn btn-warning">Submit</button>
